[package]
authors = ["david-perez <hallaplay835@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stack-songs-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cty = "0.2.0"

[build-dependencies]
bindgen = "0.50"
cc = "1.0"

# This lets you use `cargo fix`!
[[bin]]
name = "stack-songs-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
